removing blog as an option

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,5 @@ main:
     url: /cv/
   - title: "Portfolio"
     url: /portfolio/
-  - title: "Blog"
-    url: /blog/
+#  - title: "Blog"
+#    url: /blog/
