adding linkedin profile

--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ author:
       url: "https://github.com/lee3206"
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
-      url: "https://linkedin.com/"
+      url: "https://www.linkedin.com/in/lee-taber-3a981650/"
 
 
 footer:
