--- a/_config.yml
+++ b/_config.yml
@@ -72,6 +72,8 @@ author:
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/lee-taber-3a981650/"
+    - label: "ResearchGate"
+      url: "https://www.researchgate.net/profile/Lee-Taber"
 
 
 footer:
